--- a/a/dashboard.html
+++ b/a/dashboard.html
@@ -8,19 +8,19 @@
 </head>
 <body>
   <header>
-    <h1>Computer Science Journey Toward the A Level Cambridge Exam</h1>
+    <h1>COMPUTER SCIENCE</h1>
+    <h2>Dr Hamdani – Toward Cambridge A-Level Exams</h2>
   </header>
-  <div class="dashboard">
-    <div class="theory-column">
-      <h2>Theory Points</h2>
-      <div id="theory-points"></div>
-    </div>
-    <div class="levels-column">
-      <h2>Programming Levels</h2>
-      <div id="programming-levels" class="levels-flow"></div>
-    </div>
-  </div>
-  <button onclick="logout()">Logout</button>
+  <main class="dashboard">
+    <section class="theory-column">
+      <h3>Theory Points</h3>
+      <div id="theory-points" class="theory-wrapper"></div>
+    </section>
+    <section class="levels-column">
+      <h3>Programming Levels</h3>
+      <div id="programming-levels" class="levels-wrapper"></div>
+    </section>
+  </main>
   <script src="dashboard.js"></script>
 </body>
 </html>
