--- a/a/dashboard.html
+++ b/a/dashboard.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>A Level Dashboard</title>
+  <title>Computer Science Journey</title>
   <link rel="stylesheet" href="dashboard.css"/>
 </head>
 <body>
   <header>
-    <h1>COMPUTER SCIENCE</h1>
-    <h2>Dr Hamdani – Toward Cambridge A-Level Exams</h2>
+    <h1>COMPUTER SCIENCE JOURNEY</h1>
+    <h2>Guided by Dr Chamseddine Hamdani, toward Cambridge A-Level Exams</h2>
   </header>
   <main class="dashboard">
     <section class="theory-column">
